chore: add java versions starting from 11 to build pipeline